--- a/my-react-app/src/App/App.css
+++ b/my-react-app/src/App/App.css
@@ -1,3 +1,20 @@
+.App {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    background-color: var(--backgroud-color);
+    color: var(--primary-text-color);
+}
+
+.read-the-docs {
+    font-size: 0.25rem;
+    font-weight: 500;
+}
+
+/*
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +57,4 @@
 .read-the-docs {
   color: #888;
 }
+*/
