--- a/my-react-app/src/Header/Header.css
+++ b/my-react-app/src/Header/Header.css
@@ -3,29 +3,32 @@ header {
     font-size: 2rem;
     background-color: var(--foreground-color);
     top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem;
+    display: block;
     position: fixed;
     width: 100vw;
     z-index: 1000;
     box-shadow: var(--foreground-color) 0 0 10px;
 }
 
-.End > .icon-button{
-    justify-content: right;
+.box {
+    display: flex;
+    height: 100%;
+}
+
+.EndNav {
+    margin-left: auto;
+    display: flex;
+    align-items: end;
+    flex-direction: column-reverse;
 }
 
 .header-filler {
     height: 6rem;
-    width: 100%;
 }
 
 .Logo {
-    width: 50vw;
-    max-height: 6rem;
-    object-fit: contain;
+    width: auto;
+    max-height: 100%;
 }
 
 .header-visible {
@@ -40,13 +43,9 @@ header {
 
 @media (max-width: 850px) {
     header {
-        padding: 0.5rem 0;
         height: 4rem;
     }
     .header-filler {
         height: 4rem;
-    }
-    .Logo {
-        max-height: 4rem;
     }
 }
