--- a/my-react-app/src/IconButton/IconButton.css
+++ b/my-react-app/src/IconButton/IconButton.css
@@ -7,21 +7,24 @@
     height: 100%;
     color: var(--backgroud-color);
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     transition: gap 0.2s;
     white-space: nowrap;
     width: auto;
     object-fit: contain;
 
+}
 
+.icon-button:hover {
+   background: rgba(0,0,0,0.1);
 }
 
 .icon-button-label {
     font-size: 2rem;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 670px) {
     .icon-button {
         gap: 0.2rem;
         padding: 0.3rem 0.5rem;
