--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -2,64 +2,49 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, Arial, Helvetica, sans-serif;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+:root {
+    --foreground-color: #1414C8;
+    --primary-text-color: black;
+    --secondary-text-color: #7D7D7D;
+    --button-background-color: #FFCF71;
+    --button-border-color: #007BFF;
+    background-size: 48px 48px;
+    transition: background-image 0.25s;
 }
 
 [data-theme="light"] {
-    --backgroud-color: white;
-    --foreground-color: blue;
-    --primary-text-color: black;
-    --secondary-text-color: #535bf2;
-    --button-background-color: #1a1a1a;
-    --button-border-color: transparent;
+    background-image: url('./assets/light.png');
+
+    /* identisch zu :root */
 }
 
 [data-theme="dark"] {
-    --backgroud-color: #1f1f1f;
-    --foreground-color: blue;
-    --primary-text-color: #b6b6b6;
+    background-image: url('./assets/black.png');
+    --foreground-color: #333333;
+    --primary-text-color: #7D7D7D;
     --secondary-text-color: #535bf2;
-    --button-background-color: #1a1a1a;
+    --button-background-color: red;
     --button-border-color: transparent;
+    color-scheme: dark;
 }
+
+@media (prefers-reduced-motion) {
+    *, *::before, *::after {
+        animation-duration: 0.001s !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.001s !important;
+        scroll-behavior: auto !important;
+    }
+}
+
 /*
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -70,25 +55,5 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 */
